--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,11 +9,14 @@
         "-p",
         "test_*.py"
     ],
-    "python.testing.unittestEnabled": true,
+    "python.testing.unittestEnabled": false,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Args": [],
     "python.linting.enabled": true,
     "gitlab.instanceUrl": "https://gitlab-ncsa.ubisoft.org/",
-    "blender.addon.sourceDirectory": "./stampinfo"
+    "blender.addon.sourceDirectory": "./stampinfo",
+    "python.testing.promptToConfigure": false,
+    "python.testing.pytestEnabled": false,
+    "python.testing.nosetestsEnabled": false
 }
