Code clean-up to match Shot Manager

--- a/.vscode/settings.shared.json
+++ b/.vscode/settings.shared.json
@@ -38,6 +38,5 @@
         "plaintext"
     ],
     "blender.addon.sourceDirectory": "./stampinfo",
-    "restructuredtext.confPath": "${​​​​​​​​workspaceFolder}​​​​​​​​\\docs",
-    "esbonio.sphinx.confDir": ""
+    "restructuredtext.confPath": "${​​​​​​​​workspaceFolder}​​​​​​​​\\docs"
 }
